--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
   margin-bottom: 0.5em;
 }
 
+/* Color the icons and headings in the What We Do section */
 .fas,
 #section-what h4,
 #section-what h2 {
@@ -86,7 +87,9 @@ h2 {
 /* Featurettes ------------------------- */
 
 #section-featurettes {
-  padding: 8em 0;
+  /* padding: 8em 0; */
+  padding-top: 8em;
+  padding-bottom: 8em;
 }
 
 .featurette-divider {
